--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url("img/Homepgimg.jpg") no-repeat center fixed;
+    background: url("img/Homeg-img.jfif") no-repeat center fixed;
     background-size: cover;
     font-family: 'Times New Roman', Times, serif;
     margin: auto;
