--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 body{
-    background: url("img/Homeg-img.jfif") no-repeat center fixed;
+    background: url("img/bts.webp") no-repeat center fixed;
     background-size: cover;
     font-family: 'Times New Roman', Times, serif;
+    color: black;
     margin: auto;
     border: 50px;
     padding: 55px 0px;
     text-align: center;
-    
+    max-width: 100%;
+    height: auto;
+}
+
+
+div{
+    background-color: rgba(236, 247, 247, 0.6);
+    font-family: 'Times New Roman', Times, serif;
 }
