--- a/1style.css
+++ b/1style.css
@@ -30,6 +30,27 @@ a:hover{
     text-decoration: underline;
 }
 
+.index{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    border: 10px;
+    margin: 15px;
+}
+
+.about{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    border: 10px;
+    margin: 15px;
+}
+
+.quiz{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    border: 10px;
+    margin: 15px;
+}
+
 ul{
     text-align: left;
     width: 450px;
