--- a/2style.css
+++ b/2style.css
@@ -14,6 +14,37 @@ body{
     height: auto;
 }
 
+a{
+    color:rgb (60, 39, 94);
+    text-decoration: none;
+}
+
+a:hover{
+    color:  rgb(171, 141, 218);
+
+}
+
+.index{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    border: 10px;
+    margin: 15px;
+}
+
+.about{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    border: 10px;
+    margin: 15px;
+}
+
+.quiz{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    border: 10px;
+    margin: 15px;
+}
+
 div{
     background-color: rgba(248, 248, 248, 0.5);
     font-family: 'Times New Roman', Times, serif;
