--- a/2style.css
+++ b/2style.css
@@ -54,3 +54,18 @@ div{
     padding: 30px;
     margin: auto;
 }
+
+button{
+    color:  rgb(60, 39, 94);
+    background-color: rgb(218, 208, 233);
+    padding: 5px 15px;
+    border-radius: 5px;
+    margin: 5px;
+    font-size: 16px;
+}
+
+button:hover{
+    color: rgb(171, 141, 218);
+    background-color: rgb(60, 39, 94);
+   
+}
